GitVersion1/objects/External_Mapping__c.object
<CustomObject>
    <description>Add Xref External Mapping - To Capture Herd Id details</description>
    <fields>
        <fullName>Application_Mapping__c</fullName>
        <description>Application Mapping linkage with External System</description>
        <label>Application Mapping</label>
        <referenceTo>Application_Mapping__c</referenceTo>
        <relationshipLabel>External Mappings</relationshipLabel>
        <relationshipName>External_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>To Capture the Description of External Mapping</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System_Id__c</fullName>
        <description>To hold the External System no.</description>
        <externalId>true</externalId>
        <label>External System Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <label>External System</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PROS</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>AXAPTA</fullName>
                </value>
                <value>
                    <fullName>MAX</fullName>
                </value>
                <value>
                    <fullName>DDW</fullName>
                </value>
                <value>
                    <fullName>NIS</fullName>
                </value>
                <value>
                    <fullName>LM</fullName>
                </value>
                <value>
                    <fullName>LM_Site</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ex-{0}</displayFormat>
        <label>External Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>